--- a/ToDoList/Views/Task/Create.cshtml
+++ b/ToDoList/Views/Task/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@model ToDoList.Models.ToDoTask
 
-<h1>Create New Task</h1>
+<h2>Create Task</h2>
 
-<form asp-action="Create">
+<form asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="Title"></label>
         <input asp-for="Title" class="form-control" />
@@ -13,7 +13,6 @@
         <textarea asp-for="Description" class="form-control"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
-    <div>
-        <button type="submit" class="btn btn-success">Create Task</button>
-    </div>
+    <input type="hidden" asp-for="UserId" />
+    <button type="submit" class="btn btn-primary">Create Task</button>
 </form>
